--- a/index.html
+++ b/index.html
@@ -1,110 +1,109 @@
 <!DOCTYPE html><html lang="bn">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Crunchyroll Premium BD Shop</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Crunchyroll Premium BD Shop - Order</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #fff9f5;
+      background-color: #fdfcfb;
       margin: 0;
       padding: 0;
     }
     header {
       background-color: #ff6600;
-      color: #fff;
+      color: white;
       text-align: center;
       padding: 20px 0;
-      font-size: 30px;
-      font-weight: bold;
+      font-size: 28px;
     }
     .container {
       max-width: 700px;
-      margin: 40px auto;
+      margin: 30px auto;
       background: #fff;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 25px rgba(0, 0, 0, 0.05);
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     }
     h3 {
       color: #ff6600;
-      margin-bottom: 10px;
     }
     label {
-      font-weight: 600;
+      font-weight: bold;
     }
     input, select {
       width: 100%;
-      padding: 12px;
+      padding: 10px;
       margin: 10px 0 20px;
       border: 1px solid #ccc;
       border-radius: 8px;
-      font-size: 15px;
     }
     button {
       background-color: #ff6600;
       color: white;
-      padding: 14px;
+      padding: 12px;
       border: none;
       border-radius: 8px;
-      font-size: 18px;
+      font-size: 16px;
       width: 100%;
       cursor: pointer;
     }
     button:hover {
       background-color: #e65c00;
     }
-    .success, .error {
-      text-align: center;
-      font-weight: bold;
-      margin-top: 15px;
-    }
-    .success { color: green; }
-    .error { color: red; }
   </style>
 </head>
 <body>
-  <header>🔥 Crunchyroll Premium BD Shop 🔥</header>
+  <header>Crunchyroll Premium BD Shop</header>
   <div class="container">
     <form id="orderForm">
       <h3>🧾 বিলিং এড্রেস</h3>
-      <label>👤 পূর্ণ নাম *</label>
-      <input type="text" name="name" required /><label>📧 ইমেইল *</label>
-  <input type="email" name="email" required />
+      <label>Full Name *</label>
+      <input type="text" name="name" required><label>Email *</label>
+  <input type="email" name="email" required>
 
-  <label>📍 ঠিকানা *</label>
-  <input type="text" name="address" required />
+  <label>Street Address *</label>
+  <input type="text" name="address" required>
 
-  <label>📱 মোবাইল নাম্বার *</label>
-  <input type="text" name="mobile" required />
+  <label>Mobile Number *</label>
+  <input type="text" name="mobile" required>
 
   <h3>📦 প্যাকেজ সিলেকশন</h3>
-  <label>🎁 শেয়ার একাউন্ট</label>
+  <label>Crunchyroll Share Account ⚡</label>
   <select name="package">
-    <option value="1 Month Share – 100 TK">1 মাস – 100 টাকা</option>
-    <option value="3 Months Share – 300 TK">3 মাস – 300 টাকা</option>
+    <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
+    <option value="2 Months Share – 200 TK">2 Months – 200 TK</option>
+    <option value="3 Months Share – 300 TK">3 Months – 300 TK</option>
+    <option value="6 Months Share – 600 TK">6 Months – 600 TK</option>
+    <option value="8 Months Share – 840 TK">8 Months – 840 TK</option>
   </select>
 
-  <label>👨‍💼 পার্সোনাল প্রোফাইল</label>
+  <label>Crunchyroll Personal Profile ⚡</label>
   <select name="personal_package">
-    <option value="1 Month Personal – 240 TK">1 মাস – 240 টাকা</option>
-    <option value="6 Months Personal – 1440 TK">6 মাস – 1440 টাকা</option>
+    <option value="1 Month Personal – 240 TK">1 Month – 240 TK</option>
+    <option value="2 Months Personal – 480 TK">2 Months – 480 TK</option>
+    <option value="3 Months Personal – 720 TK">3 Months – 720 TK</option>
+    <option value="6 Months Personal – 1440 TK">6 Months – 1440 TK</option>
+    <option value="8 Months Personal – 1800 TK">8 Months – 1800 TK</option>
+    <option value="12 Months Personal – 2760 TK">12 Months – 2760 TK</option>
   </select>
 
-  <label>💼 প্রাইমারি একাউন্ট</label>
+  <label>Crunchyroll Primary Account ⚡</label>
   <select name="primary_package">
-    <option value="1 Month Primary – 650 TK">1 মাস – 650 টাকা</option>
-    <option value="6 Months Primary – 3600 TK">6 মাস – 3600 টাকা</option>
+    <option value="1 Month Primary – 650 TK">1 Month – 650 TK</option>
+    <option value="2 Months Primary – 1300 TK">2 Months – 1300 TK</option>
+    <option value="3 Months Primary – 1950 TK">3 Months – 1950 TK</option>
+    <option value="6 Months Primary – 3600 TK">6 Months – 3600 TK</option>
   </select>
 
   <h3>💳 পেমেন্ট তথ্য</h3>
-  <label>📞 পেমেন্ট নাম্বার *</label>
-  <input type="text" name="payment_number" required />
+  <label>Payment Number *</label>
+  <input type="text" name="payment_number" required>
 
-  <label>🔐 ট্রানজেকশন নাম্বার *</label>
-  <input type="text" name="trans_id" required />
+  <label>Transaction ID *</label>
+  <input type="text" name="trans_id" required>
 
-  <label>💰 পেমেন্ট মেথড *</label>
+  <label>Payment Method *</label>
   <select name="payment_method" required>
     <option value="Bkash">Bkash</option>
     <option value="Nagad">Nagad</option>
@@ -112,44 +111,56 @@
   </select>
 
   <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
-  <div id="responseMessage"></div>
 </form>
 
-  </div>  <!-- Firebase & EmailJS Scripts -->  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>  <script>
-    // Firebase config
+  </div>  <!-- Firebase & EmailJS Scripts -->  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+    import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+
     const firebaseConfig = {
       apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
       authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
       projectId: "crunchyrollpremiumbd-shop",
       storageBucket: "crunchyrollpremiumbd-shop.appspot.com",
       messagingSenderId: "790961397898",
-      appId: "1:790961397898:web:1c5fceb8b5d3340c3bcd73"
+      appId: "1:790961397898:web:1c5fceb8b5d3340c3bcd73",
+      measurementId: "G-PSSPTLC6MJ"
     };
 
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
     emailjs.init("SsUmUorUm-BZG8LBY");
 
-    document.getElementById("orderForm").addEventListener("submit", function (e) {
-      e.preventDefault();
-      const form = this;
+    const form = document.getElementById("orderForm");
 
-      // Send to EmailJS (Admin & Customer)
-      emailjs.sendForm("service_z1714kq", "template_hp66tqp", form)
-        .then(() => emailjs.sendForm("service_z1714kq", "template_1z1lhlf", form))
-        .then(() => {
-          // Save to Firebase
-          const formData = Object.fromEntries(new FormData(form));
-          formData.timestamp = new Date();
-          db.collection("orders").add(formData).then(() => {
-            document.getElementById("responseMessage").innerHTML = '<p class="success">✅ অর্ডার সফলভাবে পাঠানো হয়েছে! আপনি ইমেইল চেক করুন।</p>';
-            form.reset();
-          });
-        })
-        .catch((error) => {
-          console.error("Error:", error);
-          document.getElementById("responseMessage").innerHTML = '<p class="error">❌ অর্ডার ব্যর্থ হয়েছে! দয়া করে পরে আবার চেষ্টা করুন।</p>';
+    form.addEventListener("submit", async function (e) {
+      e.preventDefault();
+
+      try {
+        await addDoc(collection(db, "orders"), {
+          name: form.name.value,
+          email: form.email.value,
+          address: form.address.value,
+          mobile: form.mobile.value,
+          package: form.package.value,
+          personal_package: form.personal_package.value,
+          primary_package: form.primary_package.value,
+          payment_number: form.payment_number.value,
+          trans_id: form.trans_id.value,
+          payment_method: form.payment_method.value,
+          timestamp: serverTimestamp(),
         });
+
+        await emailjs.sendForm("service_z1714kq", "template_hp66tqp", form);
+        await emailjs.sendForm("service_z1714kq", "template_1z1lhlf", form);
+
+        alert("✅ অর্ডার সফলভাবে পাঠানো হয়েছে! আপনি শীঘ্রই ইমেইল পাবেন।");
+        form.reset();
+      } catch (error) {
+        console.error("Error:", error);
+        alert("❌ অর্ডার ব্যর্থ হয়েছে! দয়া করে পরে আবার চেষ্টা করুন।");
+      }
     });
   </script></body>
 </html>
